[package]
name = "rougepush"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
console_error_panic_hook = "0.1"
bevy_sprite3d = "2.8.0"
bevy_tweening = "0.10.0"
bevy_asset_loader = {version="0.20", features=["2d"]}
seldom_fn_plugin = "0.6"
bevy_egui = "0.25.0"
bevy-inspector-egui = "0.23.2"
rand = "0.8"
bevy_third_person_camera = "0.1.10"

[dependencies.bevy]
version = "0.13"
default-features = true
features = ["wayland"]
# features = ["bevy_ui", "bevy_asset", "bevy_text", "wayland","bevy_animation","bevy_ui"]